# cnv-bug-triage

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
src/cnv_bug_triage/: cli.py  runner.py
src/cnv_bug_triage/export/: xlsx_report.py
src/cnv_bug_triage/jira/: client.py  fields.py
src/cnv_bug_triage/llm/: client.py  duplicates.py  suggester.py
src/cnv_bug_triage/prompts/: templates.py
src/cnv_bug_triage/schemas/: bug_doc.py  config.py
src/cnv_bug_triage/team/: discovery.py
src/cnv_bug_triage/triage/: checker.py  commenter.py
tests/: conftest.py  test_bug_doc.py  test_checker.py  test_cli.py  test_commenter.py  test_config.py  test_discovery.py  test_duplicates.py  test_fields.py  test_jira_client.py  test_llm_client.py  test_prompts.py  test_runner.py  test_suggester.py  test_xlsx.py
